--- a/UI_Coursewebsite.html
+++ b/UI_Coursewebsite.html
@@ -4,6 +4,13 @@
 <!-- Required meta tags -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta property="og:title" content="Portfolio: Delphine-lan">
+<meta property="og:type" content="article">
+<meta property="og:site_name" content="Delphine-Lan">
+<meta property="og:image" content="img/KV.png">
+<link rel="icon" href="img/D_logo.png" type="image/x-icon" />
+<link rel="shortcut icon" href="img/D_logo.png" type="image/x-icon" />
+<link rel="canonical" href="index.html">
 <title>	DELPHINE LAN | PORTFOLIO</title>
 <!-- Bootstrap -->
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -20,6 +27,7 @@
 <div id="webdesign" class="container">
     <h2 class="title top-25">Course Selection Website</h2>
     <hr>
+    <p class="w-800 bottom-25">UI design, RWD web design.</p>
     <p class="title_scribe w-900 bottom-25">This is an RWD website for Online English Learning Course.</p>
     <a class="bottom-25" href="https://www.空中家教.com/tutor/Login.aspx" target="blank">link to web →</a>
     <p class="s_title_l"><span class="mark-pen">Design categories of different topics to attract students to the courses they want to learn.</span></p>
@@ -31,11 +39,15 @@
     <img class="img-fluid w-900 bottom-70" src="img/course4.jpg" alt="">
     <p class="s_title_l"><span class="mark-pen">Mobile interface.</span></p>
     <img class="img-fluid w-900 bottom-25" src="img/course5.jpg" alt="">
-    <a class="bottom-25 top-25 font-darkgray" href="UI.html">Back to UI ></a>
+
+    <p class="font-gray w-900 left-text bottom-70">Visual : Adobe Illustrator / Adobe Photoshop<br>
+      Front End : Html、CSS、Javascript、JQuery、VScode</p>
+
+    <a class="bottom-25 top-25 font-darkgray" href="UI.html">Back to UI / UX ></a>
 </div>
 
 <!--page-->
-<a class="line-arrow left font-darkgray" href="UI_appdarkmode.html"><img src="img/arr_left.png"> Previous</a>
+<a class="line-arrow left font-darkgray" href="UI_fundschip.html"><img src="img/arr_left.png"> Previous</a>
 <a class="line-arrow right font-darkgray" href="UI_amcwebsite.html">Next <img src="img/arr_right.png"></a>
 
 
