--- a/UI_amcwebsite.html
+++ b/UI_amcwebsite.html
@@ -26,6 +26,7 @@
 <div id="webdesign" class="container">
     <h2 class="title top-25">AMC official website</h2>
     <hr>
+    <p class="w-800 bottom-25">UI design, RWD web design.</p>
     <p class="title_scribe w-900 bottom-25">This is the official website of a company.<br>
         This site provides a wealth of information and we hope that the main event information will be accurately delivered to the viewer. Therefore, they are all focused on the main visual display of the activity. We hope that users can see the latest events at first sight.</p>
     <a class="bottom-25" href="https://www.english4u.net" target="blank">link to web →</a>
@@ -33,12 +34,16 @@
     <img class="img-fluid w-900 bottom-70" src="img/AMC_web2.jpg" alt="">
     <img class="img-fluid w-900 bottom-70" src="img/AMC_web3.jpg" alt="">
     <img class="img-fluid w-900 bottom-25" src="img/AMC_web4.jpg" alt="">
-    <a class="bottom-25 top-25 font-darkgray" href="UI.html">Back to UI ></a>
+
+    <p class="font-gray w-900 left-text bottom-70">Visual : Adobe Illustrator / Adobe Photoshop<br>
+      Front End : Html、CSS、Javascript、JQuery、VScode</p>
+
+    <a class="bottom-25 top-25 font-darkgray" href="UI.html">Back to UI / UX ></a>
 </div>
 
 <!--page-->
 <a class="line-arrow left font-darkgray" href="UI_Coursewebsite.html"><img src="img/arr_left.png"> Previous</a>
-<a class="line-arrow right font-darkgray" href="UI_icon_anue.html">Next <img src="img/arr_right.png"></a>
+<a class="line-arrow right font-darkgray" href="UI_socialmedia_app.html">Next <img src="img/arr_right.png"></a>
 
 
 <!-- Bootstrap -->
