--- a/UI_fundschip.html
+++ b/UI_fundschip.html
@@ -27,7 +27,8 @@
 <div id="webdesign" class="container">
     <h2 class="title top-25">Funds Chip</h2>
     <hr>
-    <p class="title_scribe w-900 bottom-25">UI design for App & Mobile Web.<br>
+    <p class="w-800 bottom-25">App and Mobile web UI design</p>
+    <p class="title_scribe w-900 bottom-25">
         A theme page in the Website and App.</p>
     <img class="img-fluid bottom-70" src="img/fundschip_pic1.gif" alt="">
     <p class="s_title bottom-25">thermodynamic chart Status</p>
@@ -37,7 +38,10 @@
     <p class="s_title top-95 bottom-25">thermodynamic line chart</p>
     <p class="title_scribe w-900 bottom-25">Due to the different operation modes of app and web, the interface design will be slightly different.</p>
     <img class="img-fluid w-600 bottom-70" src="img/fundschip_pic4.jpg" alt="">
-    <a class="bottom-25 top-25 font-darkgray" href="UI.html">Back to UI ></a>
+
+    <p class="font-gray w-900 left-text bottom-70">Visual : Adobe Illustrator / Sketch</p>
+
+    <a class="bottom-25 top-25 font-darkgray" href="UI.html">Back to UI / UX ></a>
 </div>
 
 <!--page-->
