--- a/UI_socialmedia_web.html
+++ b/UI_socialmedia_web.html
@@ -26,7 +26,7 @@
 <div id="webdesign" class="container">
     <h2 class="title top-25">Social Media Website</h2>
     <hr>
-    <p class="w-800 bottom-25">UI design for Web, RWD web design.</p>
+    <p class="w-800 bottom-25">UI/UX design, RWD web design.</p>
     <p class="title_scribe w-800 bottom-70">Anue Hao is a social-media platform focusing on financial management. Readers can follow the big and small events of the day through a timeline and personalized functions. For creators, it is a combination of industry-exclusive editors and multimedia.<br>
     <a href="https://hao.cnyes.com/" target="blank">View Product on web</a></p>
 
@@ -83,7 +83,9 @@
     <img class="img-fluid w-900" src="img/mp_web5@2x.png" alt="">
     <img class="img-fluid w-900 bottom-70" src="img/mp_web6@2x.png" alt="">
 
-    <a class="bottom-25 top-25 font-darkgray" href="UI.html">Back to UI ></a>
+    <p class="font-gray w-900 left-text bottom-70">Visual : Adobe Illustrator / Sketch</p>
+
+    <a class="bottom-25 top-25 font-darkgray" href="UI.html">Back to UI / UX ></a>
 </div>
 
 <!--page-->
