--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="caption-warp">
           <div class="caption-text center-text">
             <h5>Social Media App</h5>
-            <p class="font-subdark center-text">App UI design</p>
+            <p class="font-subdark center-text">App UI/UX Design</p>
           </div>
         </div>
       </a>
@@ -61,7 +61,7 @@
         <div class="caption-warp">
           <div class="caption-text center-text">
             <h5>Social Media Web</h5>
-            <p class="font-subdark center-text">RWD web design, UI design</p>
+            <p class="font-subdark center-text">RWD Web Design, UI/UX Design</p>
           </div>
         </div>
       </a>
@@ -74,7 +74,7 @@
         <div class="caption-warp">
           <div class="caption-text center-text">
             <h5>Social Media CMS</h5>
-            <p class="font-subdark center-text">CMS UI design</p>
+            <p class="font-subdark center-text">CMS UI/UX Design</p>
           </div>
         </div>
       </a>
@@ -87,7 +87,7 @@
         <div class="caption-warp">
           <div class="caption-text center-text">
             <h5>News Channel of Web</h5>
-            <p class="font-subdark center-text">RWD web design, UI design</p>
+            <p class="font-subdark center-text">RWD Web Design, UI Design</p>
           </div>
         </div>
       </a>
@@ -100,7 +100,7 @@
         <div class="caption-warp">
           <div class="caption-text center-text">
             <h5>Funds Chip</h5>
-            <p class="font-subdark center-text">UI design for App & Mobile Web</p>
+            <p class="font-subdark center-text">App and Web UI Design</p>
           </div>
         </div>
       </a>
@@ -139,7 +139,7 @@
         <div class="caption-warp">
           <div class="caption-text center-text">
             <h5>Course Selection Website</h5>
-            <p class="font-subdark center-text">RWD web design, UI design</p>
+            <p class="font-subdark center-text">RWD Web Design, UI Design</p>
           </div>
         </div>
       </a>
@@ -151,8 +151,8 @@
       <a href="UI_amcwebsite.html" class="captiondetails">
         <div class="caption-warp">
           <div class="caption-text center-text">
-            <h5>AMC official website</h5>
-            <p class="font-subdark center-text">RWD web design</p>
+            <h5>AMC Official Website</h5>
+            <p class="font-subdark center-text">RWD Web Design, UI Design</p>
           </div>
         </div>
       </a>
