--- a/visual_amcdm.html
+++ b/visual_amcdm.html
@@ -26,7 +26,7 @@
 <div id="webdesign" class="container">
     <h2 class="title top-25">AMC Poster</h2>
     <hr>
-    <p class="title_scribe w-900 bottom-25">I worked at AMC group from 2014-2019 as a Web designer. This included DM, corporate brochures, and Poster for magazine, and large format print design for advert and events.</p>
+    <p class="title_scribe w-800 bottom-25">I worked at AMC group from 2014-2019 as a Web designer. This included DM, corporate brochures, and Poster for magazine, and large format print design for advert and events.</p>
     <p class="s_title bottom-25">Poster</p>
     <img class="img-fluid w-150" src="img/amc_poster1.jpg" alt="">
     <img class="img-fluid w-150" src="img/amc_poster2.jpg" alt="">
@@ -45,6 +45,7 @@
     <img class="img-fluid w-300 bottom-70" src="img/amcdm_pic2.jpg" alt="">
     <img class="img-fluid w-300 bottom-70" src="img/amcdm_pic3.jpg" alt="">
     <img class="img-fluid w-300 bottom-70" src="img/amcdm_pic4.jpg" alt="">
+    <p class="font-gray w-900 left-text bottom-70">Visual : Adobe Illustrator / Adobe Photoshop / Adobe Indesign</p>
     <p>Copyright © AMC</p>
     <a class="bottom-25 top-25 font-darkgray" href="visual.html">Back to Visual ></a>
 </div>
