--- a/visual_anue.html
+++ b/visual_anue.html
@@ -36,6 +36,8 @@
     <p class="title_scribe w-900 bottom-25">I designed the key visual and used html and css to complete them.</p>
     <a class="bottom-70" href="https://campaign.cnyes.com/topics/anuecrypto/" target="blank">link to web →</a>
     <!--<img class="img-fluid w-800 bottom-70" src="img/Invesco_pic1.gif" alt="">-->
+    <p class="font-gray w-900 left-text bottom-70">Visual : Adobe Illustrator / Adobe Photoshop<br>
+      Front End : Html、CSS、Javascript、JQuery、VScode</p>
     <p>Copyright © Anue</p>
     <a class="bottom-25 top-25 font-darkgray" href="visual.html">Back to Visual ></a>
 </div>
