--- a/visual_bookcover_taitra.html
+++ b/visual_bookcover_taitra.html
@@ -26,10 +26,11 @@
 <div id="webdesign" class="container">
     <h2 class="title top-25">TAITRA</h2>
     <hr>
-    <p class="title_scribe w-900 bottom-25">This is the cover of a series exhibition brochures I designed for Taitra.  According to different exhibitions, I designed images that fit the theme.</p>
+    <p class="title_scribe w-800 bottom-25">This is the cover of a series exhibition brochures I designed for Taitra.  According to different exhibitions, I designed images that fit the theme.</p>
     <img class="img-fluid w-900 bottom-25" src="img/taitra_bookcover_pic1.png" alt="">
     <img class="img-fluid w-900 bottom-25" src="img/taitra_bookcover_pic2.png" alt="">
     <img class="img-fluid w-900 bottom-70" src="img/taitra_bookcover_pic3.png" alt="">
+    <p class="font-gray w-900 left-text bottom-70">Visual : Adobe Illustrator / Adobe Photoshop</p>
     <p>Copyright © TAITRA</p>
     <a class="bottom-25 top-25 font-darkgray" href="visual.html">Back to Visual ></a>
 </div>
