--- a/visual_dora.html
+++ b/visual_dora.html
@@ -26,7 +26,7 @@
 <div id="webdesign" class="container">
     <h2 class="title top-25">Dora Bridal Diamond</h2>
     <hr>
-    <p class="title_scribe w-900 bottom-25">About Dora : 珠寶婚戒品牌<br>
+    <p class="title_scribe w-800 bottom-25">About Dora : 珠寶婚戒品牌<br>
         Dora來自古希臘語意思是”來自上帝的禮物”......<br>
         我設計了這本品牌周邊商品，內含型錄、DM、網路通路形象推廣圖及商品圖，介紹了Dora的品牌定位和系列產品。</p>
     <p class="s_title bottom-25">Logo use</p>
@@ -35,7 +35,8 @@
     <img class="img-fluid w-900 bottom-25" src="img/dora_pic2.jpg" alt="">
     <p class="s_title bottom-25">Application</p>
     <img class="img-fluid w-900 bottom-25" src="img/dora_pic3.jpg" alt="">
-    <img class="img-fluid w-900 bottom-70" src="img/dora_pic4.jpg" alt="">
+    <img class="img-fluid w-900" src="img/dora_pic4.jpg" alt="">
+    <p class="font-gray w-900 left-text bottom-70">Visual : Adobe Illustrator / Adobe Photoshop</p>
     <p>Copyright © Dora</p>
     <a class="bottom-25 top-25 font-darkgray" href="visual.html">Back to Visual ></a>
 </div>
