--- a/visual_laman.html
+++ b/visual_laman.html
@@ -26,8 +26,9 @@
 <div id="webdesign" class="container">
     <h2 class="title top-25">樂麵屋</h2>
     <hr>
-    <p class="title_scribe w-900 bottom-25">This is a series of ramen posters I designed for 樂麵屋</p>
-    <img class="img-fluid w-900 bottom-70" src="img/laman_pic1.png" alt="">
+    <p class="title_scribe w-800 bottom-25">This is a series of ramen posters I designed for 樂麵屋</p>
+    <img class="img-fluid w-900 bottom-25" src="img/laman_pic1.png" alt="">
+    <p class="font-gray w-900 left-text bottom-70">Visual : Adobe Illustrator / Adobe Photoshop</p>
     <p>Copyright © 樂麵屋</p>
     <a class="bottom-25 top-25 font-darkgray" href="visual.html">Back to Visual ></a>
 </div>
