--- a/visual_tis.html
+++ b/visual_tis.html
@@ -26,11 +26,12 @@
 <div id="webdesign" class="container">
     <h2 class="title top-25">Taipei in Style - TIS Exhibition</h2>
     <hr>
-    <p class="title_scribe w-900 bottom-25">This is an event newspaper I designed for the TIS exhibition. The newspaper provides information from the previous day, so it needs to be typeset quickly and printed on the same day.</p>
+    <p class="title_scribe w-800 bottom-25">This is an event newspaper I designed for the TIS exhibition. The newspaper provides information from the previous day, so it needs to be typeset quickly and printed on the same day.</p>
     <p class="s_title bottom-25">2013 TIS Exhibition-Taipei in Style</p>
     <img class="img-fluid w-900 bottom-70" src="img/TIS_pic1.jpg" alt="">
     <p class="s_title bottom-25">2012 TIS Exhibition-Taipei in Style</p>
     <img class="img-fluid w-900 bottom-70" src="img/TIS_pic2.jpg" alt="">
+    <p class="font-gray w-900 left-text bottom-70">Visual : Adobe Illustrator / Adobe Photoshop / Adobe Indesign</p>
     <p>Copyright © TIS</p>
     <a class="bottom-25 top-25 font-darkgray" href="visual.html">Back to Visual ></a>
 </div>
