--- a/UI_news.html
+++ b/UI_news.html
@@ -26,7 +26,7 @@
 <div id="webdesign" class="container">
     <h2 class="title top-25">News Channel of Website</h2>
     <hr>
-    <p class="title_scribe w-900 bottom-25">UI design for Web, RWD web design.</p>
+    <p class="w-800 bottom-25">UI design, RWD web design.</p>
     <p class="s_title bottom-25">News Page</p>
     <!--<a class="bottom-25" href="" target="blank">link to web →</a>-->
     <img class="img-fluid w-900" src="img/anuenews1@2x.png" alt="">
@@ -34,7 +34,10 @@
     <img class="img-fluid w-900" src="img/anuenews5@2x.png" alt="">
     <img class="img-fluid w-900" src="img/anuenews3@2x.png" alt="">
     <img class="img-fluid w-900" src="img/anuenews4@2x.png" alt="">
-    <a class="bottom-25 top-25 font-darkgray" href="UI.html">Back to UI ></a>
+
+    <p class="font-gray w-900 left-text bottom-70">Visual : Adobe Illustrator / Sketch</p>
+
+    <a class="bottom-25 top-25 font-darkgray" href="UI.html">Back to UI / UX ></a>
 </div>
 
 <!--page-->
