--- a/UI_socialmedia_app.html
+++ b/UI_socialmedia_app.html
@@ -26,6 +26,7 @@
 <div id="webdesign" class="container">
     <h2 class="title top-25">Anue Hao: Social Media App</h2>
     <hr>
+    <p class="w-800 bottom-25">App UI/UX design</p>
     <p class="title_scribe w-800 bottom-25">Anue Hao is a social-media platform focusing on financial management. Readers can follow the big and small events of the day through a timeline and personalized functions. For creators, it is a combination of industry-exclusive editors and multimedia.</p>
     <img class="img-fluid w-900 bottom-70" src="img/mp_app1@2x.png" alt="">
 
@@ -74,11 +75,13 @@
     </p>
     <img class="img-fluid w-900 bottom-70" src="img/mp_app10@2x.png" alt="">
 
-    <a class="bottom-25 top-25 font-darkgray" href="UI.html">Back to UI ></a>
+    <p class="font-gray w-900 left-text bottom-70">Visual : Adobe Illustrator / Sketch</p>
+
+    <a class="bottom-25 top-25 font-darkgray" href="UI.html">Back to UI / UX ></a>
 </div>
 
 <!--page-->
-<a class="line-arrow left font-darkgray" href="UI_icon_anue.html"><img src="img/arr_left.png"> Previous</a>
+<a class="line-arrow left font-darkgray" href="UI_amcwebsite.html"><img src="img/arr_left.png"> Previous</a>
 <a class="line-arrow right font-darkgray" href="UI_socialmedia_web.html">Next <img src="img/arr_right.png"></a>
 
 
