--- a/visual.html
+++ b/visual.html
@@ -4,6 +4,13 @@
 <!-- Required meta tags -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta property="og:title" content="Portfolio: Delphine-lan">
+<meta property="og:type" content="article">
+<meta property="og:site_name" content="Delphine-Lan">
+<meta property="og:image" content="img/KV.png">
+<link rel="icon" href="img/D_logo.png" type="image/x-icon" />
+<link rel="shortcut icon" href="img/D_logo.png" type="image/x-icon" />
+<link rel="canonical" href="index.html">
 <title>	DELPHINE LAN | PORTFOLIO</title>
 <!-- Bootstrap -->
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
