--- a/visual_amcedm.html
+++ b/visual_amcedm.html
@@ -26,7 +26,7 @@
 <div id="webdesign" class="container">
     <h2 class="title top-25">AMC EDM</h2>
     <hr>
-    <p class="title_scribe w-900 bottom-25">I worked at AMC group from 2014-2019 as a Web designer. This included  Series RWD EDM design for website and social media. I designed the key visual and used html and css to complete them.</p>
+    <p class="title_scribe w-800 bottom-25">I worked at AMC group from 2014-2019 as a Web designer. This included  Series RWD EDM design for website and social media. I designed the key visual and used html and css to complete them.</p>
     <img class="img-fluid w-900" src="img/amcedm_pic1.png" alt="">
     <a class="bottom-70" href="https://www.4kids.com.tw/edm/20190501_Summercamp/index.aspx" target="blank">link to web →</a>
     <img class="img-fluid w-900" src="img/amcedm_pic2.png" alt="">
@@ -41,6 +41,8 @@
     <a class="bottom-70" href="https://www.空中家教.com/web/edm/20170823_Renewal/OAD_eDM.aspx" target="blank">link to web →</a>
     <img class="img-fluid w-900" src="img/amcedm_pic7.png" alt="">
     <a class="bottom-70" href="https://www.空中家教.com/web/edm/20190315_Invest/AAD_eDM.aspx" target="blank">link to web →</a>
+    <p class="font-gray w-900 left-text bottom-70">Visual : Adobe Illustrator / Adobe Photoshop<br>
+      Front End : Html、CSS、Javascript、JQuery、VScode</p>
     <p>Copyright © AMC</p>
     <a class="bottom-25 top-25 font-darkgray" href="visual.html">Back to Visual ></a>
 </div>
