--- a/visual_amctshirt.html
+++ b/visual_amctshirt.html
@@ -26,10 +26,11 @@
 <div id="webdesign" class="container">
     <h2 class="title top-25">T-shirt 設計</h2>
     <hr>
-    <p class="title_scribe w-900 bottom-25">This is an event T-shirt I designed for AMC Children's American Language Center. The main design is the company's mascot, and it is presented in a four-frame comic.</p>
+    <p class="title_scribe w-800 bottom-25">This is an event T-shirt I designed for AMC Children's American Language Center. The main design is the company's mascot, and it is presented in a four-frame comic.</p>
     <img class="img-fluid w-900 bottom-25" src="img/tshirt_pic1.png" alt="">
     <img class="img-fluid w-900 bottom-25" src="img/tshirt_pic2.png" alt="">
     <img class="img-fluid w-900 bottom-70" src="img/tshirt_pic3.png" alt="">
+    <p class="font-gray w-900 left-text bottom-70">Visual : Adobe Illustrator</p>
     <p>Copyright © AMC</p>
     <a class="bottom-25 top-25 font-darkgray" href="visual.html">Back to Visual ></a>
 </div>
