--- a/visual_iroo.html
+++ b/visual_iroo.html
@@ -26,8 +26,9 @@
 <div id="webdesign" class="container">
     <h2 class="title top-25">iRoo</h2>
     <hr>
-    <p class="title_scribe w-900 bottom-25">In 2019, I was approached by iRoo to create a package of digital marketing design templates, which included website and social content assets. iRoo is a contemporary ready-to-wear label based in Taiwan. Its elegant design detail has made its way onto various luxury online retail websites and Physical storefronts.</p>
-    <img class="img-fluid w-900 bottom-70" src="img/iroo.png" alt="">
+    <p class="title_scribe w-800 bottom-25">In 2019, I was approached by iRoo to create a package of digital marketing design templates, which included website and social content assets. iRoo is a contemporary ready-to-wear label based in Taiwan. Its elegant design detail has made its way onto various luxury online retail websites and Physical storefronts.</p>
+    <img class="img-fluid w-900 bottom-25" src="img/iroo.png" alt="">
+    <p class="font-gray w-900 left-text bottom-70">Visual : Adobe Illustrator / Adobe Photoshop</p>
     <p>Copyright © iRoo</p>
     <a class="bottom-25 top-25 font-darkgray" href="visual.html">Back to Visual ></a>
 </div>
