--- a/about.html
+++ b/about.html
@@ -49,7 +49,15 @@
 
     <div class="col-md-12 about_me">
       <h5>Work experience</h5>
-      <p class="font-gray">Apr 2022 - Present</p>
+      <p class="font-gray">Aug 2022 - Present</p>
+      <p class="font-bold font-subdark">Senior UI/UX Designer | 遠創智慧股份有限公司 FETC International Co., LTD.</p>
+      <p class="font-gray">Conduct competitor study and user research for various Product with parking business.<br>
+        Design different platform interface include website, APP and pay station.<br>
+        Find solutions by using usability testing or user behavior research to optimize user 
+        experience. <br>
+        Work along with engineer and product manager to deliver product in time</p>
+
+      <p class="top-16 font-gray">Apr 2022 - Aug 2022</p>
       <p class="font-bold font-subdark">Senior UI/UX Designer | TenMax ad Tech Lab Co., LTD.</p>
       <p class="font-gray">B2B platform design include DSP and SSP platform.<br>
         Communicate and interact with different functions, deliver a high-quality UI design and
