--- a/UI_news.html
+++ b/UI_news.html
@@ -85,7 +85,7 @@
     
   });
 </script>
-<script language=JavaScript>
+<!--<script language=JavaScript>
   const USER_PWD = 'delphine';
   const password = prompt('輸入密碼');
 
@@ -93,7 +93,7 @@
     window.history.go(-1)
   }
   document.write(password()); 
-</script>
+</script>-->
 <script src="js/script.js"></script>
 </body>
 </html>
