--- a/UI_socialmedia_app.html
+++ b/UI_socialmedia_app.html
@@ -125,7 +125,7 @@
     
   });
 </script>
-<script language=JavaScript>
+<!--<script language=JavaScript>
   const USER_PWD = 'delphine';
 const password = prompt('輸入密碼');
 
@@ -133,7 +133,7 @@ if (password !== USER_PWD) {
  window.history.go(-1)
 }
   document.write(password()); 
-</script>
+</script>-->
 <script src="js/script.js"></script>
 </body>
 </html>
