--- a/UI_fundschip.html
+++ b/UI_fundschip.html
@@ -46,7 +46,7 @@
 
 <!--page-->
 <a class="line-arrow left font-darkgray" href="UI_news.html"><img src="img/arr_left.png"> Previous</a>
-<a class="line-arrow right font-darkgray" href="UI_subscription.html">Next <img src="img/arr_right.png"></a>
+<a class="line-arrow right font-darkgray" href="UI_Coursewebsite.html">Next <img src="img/arr_right.png"></a>
 
 
 <!-- Bootstrap -->
