--- a/UI_socialmedia_cms.html
+++ b/UI_socialmedia_cms.html
@@ -113,7 +113,7 @@
     
   });
 </script>
-<script language=JavaScript>
+<!--<script language=JavaScript>
   const USER_PWD = 'delphine';
   const password = prompt('輸入密碼');
 
@@ -121,7 +121,7 @@
     window.history.go(-1)
   }
   document.write(password()); 
-</script>
+</script>-->
 <script src="js/script.js"></script>
 </body>
 </html>
