--- a/UI_Coursewebsite.html
+++ b/UI_Coursewebsite.html
@@ -43,7 +43,7 @@
     <p class="font-gray w-900 left-text bottom-70">Visual : Adobe Illustrator / Adobe Photoshop<br>
       Front End : Html、CSS、Javascript、JQuery、VScode</p>
 
-    <a class="bottom-25 top-25 font-darkgray" href="UI.html">Back to UI / UX ></a>
+    <a class="bottom-25 top-25 font-darkgray" href="index.html">Back to UI / UX ></a>
 </div>
 
 <!--page-->
