--- a/UI_amcwebsite.html
+++ b/UI_amcwebsite.html
@@ -38,12 +38,12 @@
     <p class="font-gray w-900 left-text bottom-70">Visual : Adobe Illustrator / Adobe Photoshop<br>
       Front End : Html、CSS、Javascript、JQuery、VScode</p>
 
-    <a class="bottom-25 top-25 font-darkgray" href="UI.html">Back to UI / UX ></a>
+    <a class="bottom-25 top-25 font-darkgray" href="index.html">Back to UI / UX ></a>
 </div>
 
 <!--page-->
 <a class="line-arrow left font-darkgray" href="UI_Coursewebsite.html"><img src="img/arr_left.png"> Previous</a>
-<a class="line-arrow right font-darkgray" href="UI_socialmedia_app.html">Next <img src="img/arr_right.png"></a>
+<a class="line-arrow right font-darkgray" href="UI_GoGan.html">Next <img src="img/arr_right.png"></a>
 
 
 <!-- Bootstrap -->
