--- a/UI_appdarkmode.html
+++ b/UI_appdarkmode.html
@@ -25,7 +25,7 @@
     <img class="img-fluid w-900 bottom-70" src="img/darkmode_pic2.jpg" alt="">
     <img class="img-fluid w-900 bottom-70" src="img/darkmode_pic4.gif" alt="">
     <img class="img-fluid bottom-25" src="img/darkmode_pic3.jpg" alt="">
-    <a class="bottom-25 top-25 font-darkgray" href="UI.html">Back to UI ></a>
+    <a class="bottom-25 top-25 font-darkgray" href="index.html">Back to UI ></a>
 </div>
 
 <!--page-->
