--- a/UI_icon_anue.html
+++ b/UI_icon_anue.html
@@ -34,7 +34,7 @@
     <img class="img-fluid w-900" src="img/anue_icon5@2x.png" alt="">
     <img class="img-fluid w-900" src="img/anue_icon6@2x.png" alt="">
     <img class="img-fluid w-900" src="img/anue_icon7@2x.png" alt="">
-    <a class="bottom-25 top-25 font-darkgray" href="UI.html">Back to UI ></a>
+    <a class="bottom-25 top-25 font-darkgray" href="index.html">Back to UI ></a>
 </div>
 
 <!--page-->
