--- a/UI_news_Undisclosed.html
+++ b/UI_news_Undisclosed.html
@@ -66,7 +66,7 @@
     <hr>
     <p class="title_scribe w-900 bottom-25">The news channel website is redesigned and conforms to RWD, the optimized interface is convenient for users to read on mobile phones.</p>
     <img class="img-fluid w-900 bottom-70" src="img/img_Undisclosed.jpg" alt="">
-    <a class="bottom-25 top-25 font-darkgray" href="UI.html">Back to UI/UX ></a>
+    <a class="bottom-25 top-25 font-darkgray" href="index.html">Back to UI/UX ></a>
 </div>
 
 <!--page-->
