--- a/UI_socialmedia_cms.html
+++ b/UI_socialmedia_cms.html
@@ -65,7 +65,7 @@
 
     <p class="font-gray w-900 left-text bottom-70">Visual : Adobe Illustrator / Sketch</p>
 
-    <a class="bottom-25 top-25 font-darkgray" href="UI.html">Back to UI / UX ></a>
+    <a class="bottom-25 top-25 font-darkgray" href="index.html">Back to UI / UX ></a>
 </div>
 
 <!--page-->
