--- a/UI_subscription.html
+++ b/UI_subscription.html
@@ -32,7 +32,7 @@
     <img class="img-fluid w-900" src="img/subscription3@2x.png" alt="">
     <img class="img-fluid w-900" src="img/subscription4@2x.png" alt="">
     <img class="img-fluid w-900 bottom-70" src="img/ui_web_membernews.jpg" alt="">
-    <a class="bottom-25 top-25 font-darkgray" href="UI.html">Back to UI ></a>
+    <a class="bottom-25 top-25 font-darkgray" href="index.html">Back to UI ></a>
 </div>
 
 <!--page-->
