--- a/UI_socialmedia_app.html
+++ b/UI_socialmedia_app.html
@@ -77,11 +77,11 @@
 
     <p class="font-gray w-900 left-text bottom-70">Visual : Adobe Illustrator / Sketch</p>
 
-    <a class="bottom-25 top-25 font-darkgray" href="UI.html">Back to UI / UX ></a>
+    <a class="bottom-25 top-25 font-darkgray" href="index.html">Back to UI / UX ></a>
 </div>
 
 <!--page-->
-<a class="line-arrow left font-darkgray" href="UI_amcwebsite.html"><img src="img/arr_left.png"> Previous</a>
+<a class="line-arrow left font-darkgray" href="UI_GoGan.html"><img src="img/arr_left.png"> Previous</a>
 <a class="line-arrow right font-darkgray" href="UI_socialmedia_web.html">Next <img src="img/arr_right.png"></a>
 
 
