--- a/UI_GoGan.html
+++ b/UI_GoGan.html
@@ -25,7 +25,7 @@
 
 <div id="webdesign" class="container">
     <h2 class="title top-25">GoGan Demand-Side Platform</h2>
-    <p class="w-800 bottom-25">Project: Campaign Duplicate</p>
+    <p class="w-800">Project: Campaign Duplicate</p>
     <hr>
     <p class="w-800 bottom-25">DSP UI/UX design</p>
     <p class="title_scribe w-800 bottom-25">GoGan is a DSP system for Gojek. Integrate advertsing platform such as Google, Facebook and Gojek. Effectively assist merchants to formulate various sizes of digital marketing plans according to their needs, make advertisers to view the advertising effects of different platforms at once.</p>
