--- a/about.html
+++ b/about.html
@@ -98,9 +98,10 @@
        - Creative strategy animation planning.<br>
        - Producing visual effects Video.</p>
 
-       <h5>Certificate</h5>
-       <p><b><a href="https://www.credly.com/badges/fd9429d9-1299-4ffe-b5d8-fc702fe9d4f0/public_url" target="blank">Google UX Design  →</a></b></p>
+      <h5>Certificate</h5>
+      <p><b><a href="https://www.credly.com/badges/fd9429d9-1299-4ffe-b5d8-fc702fe9d4f0/public_url" target="blank">Google UX Design  →</a></b></p>
       <p><b><a href="https://coursera.org/share/4a708a4b72eaa92461b524061f3aa075" target="blank">Foundations of User Experience (UX) Design  →</a></b></p>
+      <p><b><a href="https://skillshop.credential.net/9d754265-011c-45d9-bd4b-640706662977" target="blank">Google Analytics Certification  →</a></b></p>
 
       <h5>Skill</h5>
       <p class="font-bold font-subdark">UI / UX Design</p>
