--- a/UI_utaggo_web.html
+++ b/UI_utaggo_web.html
@@ -54,8 +54,8 @@
     </p>
 
     <h6 class="w-900 bottom-25 font-green">User Interface<span class="greenbar"></span></h6>
-    <img class="img-fluid w-900" src="img/utaggo_parkinglot_6.png" alt="">
-    <img class="img-fluid w-900" src="img/utaggo_parkinglot_7.png" alt="">
+    <img class="img-fluid bottom-25 w-900" src="img/utaggo_parkinglot_6.png" alt="">
+    <img class="img-fluid bottom-25 w-900" src="img/utaggo_parkinglot_7.png" alt="">
     <img class="img-fluid w-900 bottom-70" src="img/utaggo_parkinglot_8.png" alt="">
 
     <p class="font-gray w-900 left-text bottom-70">Tools : Figma</p>
