--- a/UI_GoGan.html
+++ b/UI_GoGan.html
@@ -100,7 +100,7 @@ Manual price reduction: bid cap=3000 only ran 10% of the budget, so maybe 10 Ads
 </div>
 
 <!--page-->
-<a class="line-arrow left font-darkgray" href="UI_amcwebsite.html"><img src="img/arr_left.png"> Previous</a>
+<a class="line-arrow left font-darkgray" href="UI_utaggo_web.html"><img src="img/arr_left.png"> Previous</a>
 <a class="line-arrow right font-darkgray" href="UI_socialmedia_app.html">Next <img src="img/arr_right.png"></a>
 
 
