--- a/UI_amcwebsite.html
+++ b/UI_amcwebsite.html
@@ -43,7 +43,7 @@
 
 <!--page-->
 <a class="line-arrow left font-darkgray" href="UI_Coursewebsite.html"><img src="img/arr_left.png"> Previous</a>
-<a class="line-arrow right font-darkgray" href="UI_GoGan.html">Next <img src="img/arr_right.png"></a>
+<a class="line-arrow right font-darkgray" href="UI_utaggo_web.html">Next <img src="img/arr_right.png"></a>
 
 
 <!-- Bootstrap -->
