--- a/UI_utaggo_web.html
+++ b/UI_utaggo_web.html
@@ -64,7 +64,7 @@
 </div>
 
 <!--page-->
-<a class="line-arrow left font-darkgray" href="UI_amcwebsite.html"><img src="img/arr_left.png"> Previous</a>
+<a class="line-arrow left font-darkgray" href="UI_utaggo_app.html"><img src="img/arr_left.png"> Previous</a>
 <a class="line-arrow right font-darkgray" href="UI_GoGan.html">Next <img src="img/arr_right.png"></a>
 
 
