--- a/index.html
+++ b/index.html
@@ -42,6 +42,19 @@
 
 <div id="webdesign" class="container">
   <div id="pic-banner" class="col-md-4">
+    <img src="img/ui_app_utaggo.png" width="550" height="500" class="img-fluid">
+    <div class="caption">
+      <a href="UI_utaggo_app.html" class="captiondetails">
+        <div class="caption-warp">
+          <div class="caption-text center-text">
+            <h5>uTagGo APP</h5>
+            <p class="font-subdark center-text">APP UI/UX design</p>
+          </div>
+        </div>
+      </a>
+    </div>
+  </div>
+  <div id="pic-banner" class="col-md-4">
     <img src="img/ui_web_utaggo.png" width="550" height="500" class="img-fluid">
     <div class="caption">
       <a href="UI_utaggo_web.html" class="captiondetails">
@@ -119,7 +132,7 @@
       </a>
     </div>
   </div>
-  <div id="pic-banner" class="col-md-4">
+  <!--<div id="pic-banner" class="col-md-4">
     <img src="img/ui_fundschip.gif" width="550" height="500" class="img-fluid">
     <div class="caption">
       <a href="UI_fundschip.html" class="captiondetails">
@@ -132,7 +145,7 @@
       </a>
     </div>
   </div>
-  <!--<div id="pic-banner" class="col-md-4">
+  <div id="pic-banner" class="col-md-4">
     <img src="img/ui_web_membernews.jpg" width="550" height="500" class="img-fluid">
     <div class="caption">
       <a href="UI_subscription.html" class="captiondetails">
