--- a/UI_utaggo_app.html
+++ b/UI_utaggo_app.html
@@ -63,6 +63,8 @@
 
     <h6 class="w-900 bottom-25 font-green">User Interface<span class="greenbar"></span></h6>
     <img class="img-fluid bottom-25 w-900" src="img/utaggoapp_9.png" alt="">
+    <p class="w-900 bottom-5 left-text">▪ The homepage will change with time and weather changes, making it more interesting for users.</p>
+    <img class="img-fluid bottom-25 w-900" src="img/utaggoapp_13.png" alt="">
     <p class="w-900 bottom-5 left-text">▪ Users can find cooperative parking lots, gas station information, ETC service centers, etc. on the uTagGo app.</p>
     <img class="img-fluid bottom-25 w-900" src="img/utaggoapp_10.png" alt="">
     <p class="w-900 bottom-5 left-text">▪ The uTagGo app provides information on roadside parking spaces. You can search for real-time parking spaces on the app.</p>
