--- a/UI_Coursewebsite.html
+++ b/UI_Coursewebsite.html
@@ -27,7 +27,7 @@
 <div id="webdesign" class="container">
     <h2 class="title top-25">Course Selection Website</h2>
     <hr>
-    <p class="w-800 bottom-25">UI design, RWD web design.</p>
+    <p class="w-800 bottom-25">UI design | RWD</p>
     <p class="title_scribe w-900 bottom-25">This is an RWD website for Online English Learning Course.</p>
     <a class="bottom-25" href="https://www.空中家教.com/tutor/Login.aspx" target="blank">link to web →</a>
     <p class="s_title_l"><span class="mark-pen">Design categories of different topics to attract students to the courses they want to learn.</span></p>
