--- a/UI_GoGan.html
+++ b/UI_GoGan.html
@@ -27,7 +27,7 @@
     <h2 class="title top-25">GoGan Demand-Side Platform</h2>
     <p class="w-800">Project: Campaign Duplicate</p>
     <hr>
-    <p class="w-800 bottom-25">DSP UI/UX design</p>
+    <p class="w-800 bottom-25">UI/UX design</p>
     <p class="title_scribe w-800 bottom-25">GoGan is a DSP system for Gojek. Integrate advertsing platform such as Google, Facebook and Gojek. Effectively assist merchants to formulate various sizes of digital marketing plans according to their needs, make advertisers to view the advertising effects of different platforms at once.</p>
 
     <h6 class="w-900 bottom-25 font-green">My role<span class="greenbar"></span></h6>
