--- a/UI_amcwebsite.html
+++ b/UI_amcwebsite.html
@@ -26,7 +26,7 @@
 <div id="webdesign" class="container">
     <h2 class="title top-25">AMC official website</h2>
     <hr>
-    <p class="w-800 bottom-25">UI design, RWD web design.</p>
+    <p class="w-800 bottom-25">UI design | RWD</p>
     <p class="title_scribe w-900 bottom-25">This is the official website of a company.<br>
         This site provides a wealth of information and we hope that the main event information will be accurately delivered to the viewer. Therefore, they are all focused on the main visual display of the activity. We hope that users can see the latest events at first sight.</p>
     <a class="bottom-25" href="https://www.english4u.net" target="blank">link to web →</a>
