--- a/UI_news.html
+++ b/UI_news.html
@@ -26,7 +26,7 @@
 <div id="webdesign" class="container">
     <h2 class="title top-25">News Channel of Website</h2>
     <hr>
-    <p class="w-800 bottom-25">UI design, RWD web design.</p>
+    <p class="w-800 bottom-25">UI design | RWD</p>
     <p class="s_title bottom-25">News Page</p>
     <!--<a class="bottom-25" href="" target="blank">link to web →</a>-->
     <img class="img-fluid w-900" src="img/anuenews1@2x.png" alt="">
