--- a/UI_socialmedia_app.html
+++ b/UI_socialmedia_app.html
@@ -26,7 +26,7 @@
 <div id="webdesign" class="container">
     <h2 class="title top-25">Anue Hao: Social Media App</h2>
     <hr>
-    <p class="w-800 bottom-25">App UI/UX design</p>
+    <p class="w-800 bottom-25">UI/UX design | App design</p>
     <p class="title_scribe w-800 bottom-25">Anue Hao is a social-media platform focusing on financial management. Readers can follow the big and small events of the day through a timeline and personalized functions. For creators, it is a combination of industry-exclusive editors and multimedia.</p>
     <img class="img-fluid w-900 bottom-70" src="img/mp_app1@2x.png" alt="">
 
