--- a/UI_socialmedia_cms.html
+++ b/UI_socialmedia_cms.html
@@ -26,7 +26,7 @@
 <div id="webdesign" class="container">
     <h2 class="title top-25">Anue Hao: Social Media CMS</h2>
     <hr>
-    <p class="w-800 bottom-25">UI/UX design, RWD web design.</p>
+    <p class="w-800 bottom-25">UI/UX design | RWD</p>
     <p class="title_scribe w-800 bottom-70">Hao cnyes is a content management system. Through this platform, user will be able to view fans activity 、 article viewing data and interaction analysis. In addition to helping user understand potential areas for improvement, it can also formulate and optimize creative content based on public preferences through performance data.<br>
 
       User can also use the background publishing system to edit articles, schedule article publishing times and manage article status.</p>
