--- a/UI_socialmedia_web.html
+++ b/UI_socialmedia_web.html
@@ -26,7 +26,7 @@
 <div id="webdesign" class="container">
     <h2 class="title top-25">Social Media Website</h2>
     <hr>
-    <p class="w-800 bottom-25">UI/UX design, RWD web design.</p>
+    <p class="w-800 bottom-25">UI/UX design | RWD</p>
     <p class="title_scribe w-800 bottom-70">Anue Hao is a social-media platform focusing on financial management. Readers can follow the big and small events of the day through a timeline and personalized functions. For creators, it is a combination of industry-exclusive editors and multimedia.<br>
     <a href="https://hao.cnyes.com/" target="blank">View Product on web</a></p>
 
