--- a/UI_utaggo_app.html
+++ b/UI_utaggo_app.html
@@ -26,7 +26,7 @@
 <div id="webdesign" class="container">
     <h2 class="title top-25">uTagGo App</h2>
     <hr>
-    <p class="w-800 bottom-25">UI/UX design</p>
+    <p class="w-800 bottom-25">UI/UX design | User Reseach</p>
     <p class="title_scribe w-800 bottom-25">uTagGo is an platform that integrate various services for drivers. Drivers can enter and exit the parking lot quickly by eTag , and automatically withhold payment.<br>
         uTagGo is an exclusive app for drivers that improves the driving experience. It provides automatically parking payment and eTag recharge services. You can also deserved points rewards when you park your car, and the points can be used to redeem ETC highway tolls for free!</p>
     <a class="bottom-70" href="https://play.google.com/store/apps/details?id=com.fetci.etaggo&pcampaignid=web_share" target="blank">View App on store</a></p>
