--- a/UI_utaggo_web.html
+++ b/UI_utaggo_web.html
@@ -27,7 +27,7 @@
     <h2 class="title top-25">uTagGo Website</h2>
     <p class="w-800">Project: Parking Lot</p>
     <hr>
-    <p class="w-800 bottom-25">UI/UX design, RWD web design</p>
+    <p class="w-800 bottom-25">UI/UX design | RWD | Business Competition</p>
     <p class="title_scribe w-800 bottom-25">uTagGo is an platform that integrate various services for drivers. Drivers can enter and exit the parking lot quickly by eTag , and automatically withhold payment.<br>
       uTagGo parking lot website contains all of parking infomations include maps, rates, real-time spaces and popular hours in Taiwan. Let users  can find the best parking lot at their destination quickly and solve parking problems!</p>
     <a href="https://www.utaggo.com.tw/parking-lot" target="blank">View Product on web</a></p>
