--- a/UI_utaggo_web.html
+++ b/UI_utaggo_web.html
@@ -35,7 +35,7 @@
     <img class="img-fluid w-900 bottom-70" src="img/utaggo_parkinglot_1.png" alt="">
 
     <h6 class="w-900 bottom-25 font-green">My role<span class="greenbar"></span></h6>
-    <p class="w-900 bottom-70 left-text">My responsibility of this product starting from initial concept design, feature roadmap, user flow, visual design, prototyping, delivering high-fidelity mockups and communicate to developers.<br>
+    <p class="w-900 bottom-70 left-text">My responsibility of this product starting from initial concept design, business competition, feature roadmap, user flow, visual design, prototyping, delivering high-fidelity mockups and communicate to developers.<br>
       ▪ Develop project guideline specifications.<br>
       ▪ Plan and design the user interface of parking lot website.<br>
       ▪ Present to PM and RD the concept of design.<br>
