--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="caption-warp">
           <div class="caption-text center-text">
             <h5>uTagGo APP</h5>
-            <p class="font-subdark center-text">APP UI/UX design</p>
+            <p class="font-subdark center-text">#UI/UX Design #App Design</p>
           </div>
         </div>
       </a>
@@ -61,7 +61,7 @@
         <div class="caption-warp">
           <div class="caption-text center-text">
             <h5>uTagGo Website</h5>
-            <p class="font-subdark center-text">Project: Parking Lot<br>UI/UX design, RWD web design</p>
+            <p class="font-subdark center-text">Project: Parking Lot<br>#UI/UX Design #RWD</p>
           </div>
         </div>
       </a>
@@ -74,7 +74,7 @@
         <div class="caption-warp">
           <div class="caption-text center-text">
             <h5>GoGan Demand-Side Platform</h5>
-            <p class="font-subdark center-text">DSP UI/UX design</p>
+            <p class="font-subdark center-text">#UI/UX Design #User Research</p>
           </div>
         </div>
       </a>
@@ -87,7 +87,7 @@
         <div class="caption-warp">
           <div class="caption-text center-text">
             <h5>Social Media App</h5>
-            <p class="font-subdark center-text">App UI/UX Design</p>
+            <p class="font-subdark center-text">#UI/UX Design</p>
           </div>
         </div>
       </a>
@@ -100,7 +100,7 @@
         <div class="caption-warp">
           <div class="caption-text center-text">
             <h5>Social Media Web</h5>
-            <p class="font-subdark center-text">RWD Web Design, UI/UX Design</p>
+            <p class="font-subdark center-text">#UI/UX Design #RWD</p>
           </div>
         </div>
       </a>
@@ -113,7 +113,7 @@
         <div class="caption-warp">
           <div class="caption-text center-text">
             <h5>Social Media CMS</h5>
-            <p class="font-subdark center-text">CMS UI/UX Design</p>
+            <p class="font-subdark center-text">#UI/UX Design</p>
           </div>
         </div>
       </a>
@@ -126,7 +126,7 @@
         <div class="caption-warp">
           <div class="caption-text center-text">
             <h5>News Channel of Web</h5>
-            <p class="font-subdark center-text">RWD Web Design, UI Design</p>
+            <p class="font-subdark center-text">#RWD #UI Design</p>
           </div>
         </div>
       </a>
@@ -178,7 +178,7 @@
         <div class="caption-warp">
           <div class="caption-text center-text">
             <h5>Course Selection Website</h5>
-            <p class="font-subdark center-text">RWD Web Design, UI Design</p>
+            <p class="font-subdark center-text">#RWD #Web Design</p>
           </div>
         </div>
       </a>
@@ -191,7 +191,7 @@
         <div class="caption-warp">
           <div class="caption-text center-text">
             <h5>AMC Official Website</h5>
-            <p class="font-subdark center-text">RWD Web Design, UI Design</p>
+            <p class="font-subdark center-text">#RWD #Web Design</p>
           </div>
         </div>
       </a>
