--- a/UI_amcwebsite.html
+++ b/UI_amcwebsite.html
@@ -31,7 +31,7 @@
         This site provides a wealth of information and we hope that the main event information will be accurately delivered to the viewer. Therefore, they are all focused on the main visual display of the activity. We hope that users can see the latest events at first sight.</p>
     <a class="bottom-25" href="https://www.english4u.net" target="blank">link to web →</a>
     
-    <h6 class="w-900 bottom-25 font-green">My role<span class="bluebar"></span></h6>
+    <h6 class="w-900 bottom-25 font-darkgray">My role<span class="bluebar"></span></h6>
     <p class="w-900 bottom-70 left-text">
       Work as a Web Designer and responsible for visual design, HTML/CSS coding and collaborate with backend engineers.
     </p>
