--- a/UI_Coursewebsite.html
+++ b/UI_Coursewebsite.html
@@ -30,7 +30,7 @@
     <p class="w-800 bottom-25">Web design | RWD</p>
     <p class="title_scribe w-900 bottom-25">This is an RWD website for Online English Learning Course.</p>
     <a class="bottom-25" href="https://www.空中家教.com/tutor/Login.aspx" target="blank">link to web →</a>
-    <h6 class="w-900 bottom-25 font-green">My role<span class="bluebar"></span></h6>
+    <h6 class="w-900 bottom-25 font-darkgray">My role<span class="bluebar"></span></h6>
     <p class="w-900 bottom-70 left-text">
       Work as a Web Designer and responsible for visual design, HTML/CSS coding and collaborate with backend engineers.
     </p>
