--- a/UI_Coursewebsite.html
+++ b/UI_Coursewebsite.html
@@ -32,6 +32,7 @@
     <a class="bottom-25" href="https://www.空中家教.com/tutor/Login.aspx" target="blank">link to web →</a>
     <h6 class="w-800 bottom-25 center-text"><span class="font-gray"> ﹛ </span>My role<span class="font-gray"> ﹜ </span></h6>
     <p class="w-800 bottom-70 left-text">Work as a Web Designer and responsible for visual design, HTML/CSS coding and collaborate with backend engineers.</p>
+    <h6 class="w-800 bottom-25 center-text"><span class="font-gray"> ﹛ </span>Visual Design<span class="font-gray"> ﹜ </span></h6>
     <p class="s_title_l"><span class="mark-pen">Design categories of different topics to attract students to the courses they want to learn.</span></p>
     <img class="img-fluid w-900 bottom-25" src="img/course1.jpg" alt="">
     <img class="img-fluid w-900 bottom-70" src="img/course2.jpg" alt="">
