--- a/UI_amcwebsite.html
+++ b/UI_amcwebsite.html
@@ -33,6 +33,8 @@
     
     <h6 class="w-800 bottom-25 center-text"><span class="font-gray"> ﹛ </span>My role<span class="font-gray"> ﹜ </span></h6>
     <p class="w-800 bottom-70 left-text">Work as a Web Designer and responsible for visual design, HTML/CSS coding and collaborate with backend engineers.</p>
+
+    <h6 class="w-800 bottom-25 center-text"><span class="font-gray"> ﹛ </span>Visual Design<span class="font-gray"> ﹜ </span></h6>
     
     <img class="img-fluid w-900 bottom-70" src="img/AMC_web1.jpg" alt="">
     <img class="img-fluid w-900 bottom-70" src="img/AMC_web2.jpg" alt="">
