--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <div class="inner">
     <p style="font-size: 2;">Delphine Lan is a Taiwan based multidisciplinary designer specialising in <b> 💁‍♀️ Digital Design and Graphic Design.</b></p>
     <ul>
-      <li><a href="https://codepen.io/DelphineLan/" target="_blank"><img src="img/icon_codepen.svg" width="30" height="30"></a></li>
+      <!--<li><a href="https://codepen.io/DelphineLan/" target="_blank"><img src="img/icon_codepen.svg" width="30" height="30"></a></li>-->
       <li><a href="https://tw.linkedin.com/in/delphine-lan-756b11b9" target="_blank"><img src="img/icon_linkedin.svg" width="30" height="30"></a></li>
       <li><a href="https://www.instagram.com/delphine_painting/" target="_blank"><img src="img/icon_ig.svg" width="30" height="30"></a></li>
       <li><a href="mailto:sun7722blue@hotmail.com" target="_blank"><img src="img/icon_email.svg" width="30" height="30"></a></li>
