--- a/about.html
+++ b/about.html
@@ -93,7 +93,7 @@
        
       <h5>Education</h5>
       <p class="font-gray">Sep. 2006 - Jul. 2010</p>
-      <p class="font-bold font-subdark">Didital Multimedia Arts - SHU</p>
+      <p class="font-bold font-subdark">Digital Multimedia Arts - SHU</p>
       <p class="font-gray">3D Building and animation design skills<br>
        - Creative strategy animation planning.<br>
        - Producing visual effects Video.</p>
