--- a/UI_utaggo_web.html
+++ b/UI_utaggo_web.html
@@ -27,7 +27,7 @@
     <h2 class="title top-25">uTagGo Website</h2>
     <p class="w-800">Project: Parking Lot</p>
     <hr>
-    <p class="w-800 bottom-25">UI/UX design | RWD | Business Competition</p>
+    <p class="w-800 bottom-25">UI/UX design | RWD | Competitive audit</p>
     <p class="title_scribe w-800 bottom-25">uTagGo is an platform that integrate various services for drivers. Drivers can enter and exit the parking lot quickly by eTag , and automatically withhold payment.<br>
       uTagGo parking lot website contains all of parking infomations include maps, rates, real-time spaces and popular hours in Taiwan. Let users  can find the best parking lot at their destination quickly and solve parking problems!</p>
     <a href="https://www.utaggo.com.tw/parking-lot" target="blank">View Product on web</a></p>
@@ -41,6 +41,12 @@
       ▪ Present to PM and RD the concept of design.<br>
       ▪ Conduct user interview.
     </p>
+
+    <h6 class="w-900 bottom-25 font-green">Competitive audit<span class="greenbar"></span></h6>
+    <p class="w-900 bottom-5 left-text">I sought out 3 different competitors: 大聲公, Uspace and 車麻吉.<br>
+First I would compare each website in a spreadsheet that had multiple sections then write a report on what I discovered.</p>
+    <img class="img-fluid w-900 bottom-70" src="img/utaggo_parkinglot_9.png" alt="">
+    <img class="img-fluid w-900 bottom-70" src="img/utaggo_parkinglot_10.png" alt="">
 
     <h6 class="w-900 bottom-25 font-green">User Interview<span class="greenbar"></span></h6>
     <p class="w-900 bottom-5 left-text">We optimize the original parking page to increase the SEO of the website. Upon this I conducted interviews with driver and try to find the pain points.</p>
