--- a/about.html
+++ b/about.html
@@ -34,6 +34,7 @@
   </div>
   <div class="col-md-6 about_me">
     <h3>Hi there, I'm Delphine Lan! 👋 </h3>
+    <p class="font-subdark">Responsible for product experience design, integrating human-centric principles, market insights, and innovative thinking to comprehensively plan processes and interfaces that meet user needs for a good experience. Leveraging rich product experience to contribute to strategic planning, driving continuous growth of the product, and ongoing improvement of UI/UX design.</p>
     <h5>Design</h5>
     <p class="font-gray"> ▪ User interface design and process plan <br>
       ▪ User experience research and design<br> 
