--- a/about.html
+++ b/about.html
@@ -51,12 +51,14 @@
     <div class="col-md-12 about_me">
       <h5>Work experience</h5>
       <p class="font-gray">Sep. 2022 - Present</p>
-      <p class="font-bold font-subdark">Senior UI/UX Designer | 遠創智慧股份有限公司 FETC International Co., LTD.</p>
+      <p class="font-bold font-subdark">Senior UX Designer | 遠創智慧股份有限公司 FETC International Co., LTD.</p>
       <p class="font-gray">Conduct competitor study and user research for various Product with parking business.<br>
         Design different platform interface include website, APP and pay station.<br>
         Find solutions by using usability testing or user behavior research to optimize user 
         experience. <br>
         Work along with engineer and product manager to deliver product in time</p>
+      <p class="font-bold font-subdark">Design Lead</p>
+      <p class="font-gray">As the design team lead, I hold design sharing meetings every two weeks. These sessions help team members bring up any challenges they're facing so we can brainstorm solutions together. This approach improves how we handle issues when working independently. It encourages team members to openly discuss design-related problems in meetings and collectively come up with better ideas.</p>
 
       <p class="top-16 font-gray">Apr. 2022 - Aug. 2022</p>
       <p class="font-bold font-subdark">Senior UI/UX Designer | TenMax ad Tech Lab Co., LTD.</p>
